fix aligning finally.

--- a/survival.css
+++ b/survival.css
@@ -1,13 +1,10 @@
-
-/*{border: 5px solid red;}*/
 html {
       height: 100%;
       background-color: black;
-      align-self: center;
     }
     body {
-       width: 800px;
-       height: 100%;
+      width: 100%;
+      height: 100%;
       text-align: center;
       color: yellow
     }
